--- a/privacy.html
+++ b/privacy.html
@@ -20,8 +20,9 @@
   <link rel="stylesheet" href="styles/privacy.css" />
   <link rel="stylesheet" href="styles/fonts.css" />
   <link rel="stylesheet" href="styles/bootstrap.css">
-  <script src="scripts/sidebar.js"></script>
-  <script src="scripts/storage.js"></script>
+  <script defer src="scripts/sidebar.js"></script>
+  <script defer src="./scripts/utils.js"></script>
+  <script defer src="scripts/storage.js"></script>
   <script>
     function goBack() {
       window.history.back();
