--- a/addtask.html
+++ b/addtask.html
@@ -43,10 +43,11 @@
   <link rel="stylesheet" href="./styles/taskstyle.css">
   <link rel="stylesheet" href="./styles/styleSidebar.css">
   <link rel="stylesheet" href="./styles/coloris.min.css" />
-  <script src="./scripts/sidebar.js"></script>
-  <script src="./scripts/bootstrap.js"></script>
-  <script src="./scripts/addtask.js"></script>
-  <script src="./scripts/storage.js"></script>
+  <script defer src="./scripts/sidebar.js"></script>
+  <script defer src="./scripts/bootstrap.js"></script>
+  <script defer src="./scripts/utils.js"></script>
+  <script defer src="./scripts/addtask.js"></script>
+  <script defer src="./scripts/storage.js"></script>
 </head>
 
 <body onload="includeHTML(); init()">
