--- a/board.html
+++ b/board.html
@@ -24,6 +24,7 @@
   <link rel="stylesheet" href="./styles/board.css" />
   <link rel="stylesheet" href="./styles/coloris.min.css" />
   <script defer src="./scripts/storage.js"></script>
+  <script defer src="./scripts/utils.js"></script>
   <script defer src="./scripts/board.js"></script>
   <!-- <script defer src="./scripts/summary.js"></script> -->
   <script defer src="./scripts/sidebar.js"></script>
