--- a/summary.html
+++ b/summary.html
@@ -40,6 +40,7 @@
     <link rel="stylesheet" href="styles/styleSidebar.css" />
     <link rel="stylesheet" href="styles/summary.css" />
     <script defer src="scripts/summary.js"></script>
+    <script defer src="./scripts/utils.js"></script>
     <script defer src="scripts/sidebar.js"></script>
     <script defer src="scripts/storage.js"></script>
 
