adding student name of selina

--- a/legal.html
+++ b/legal.html
@@ -84,6 +84,21 @@
         <div>
           <h2 class="font27">Imprint</h2>
           <ul class="font16">
+            <li>Selina Karlin</li>
+            <li>Urbanstraße</li>
+            <li>79104 Freiburg im Breisgau</li>
+          </ul>
+          <h3 class="font20">Exploring the Board</h3>
+          <p class="font16">karlinselina@gmail.com</p>
+          
+          <ul class="font16">
+            <li>[Student Names List]</li>
+            <li>[Address of the JOIN operator - e.g. one of the students]</li>
+            <li>[Postcode and city]</li>
+          </ul>
+          <h3 class="font20">Exploring the Board</h3>
+          <p class="font16">Email: [Email]</p>
+          <ul class="font16">
             <li>[Student Names List]</li>
             <li>[Address of the JOIN operator - e.g. one of the students]</li>
             <li>[Postcode and city]</li>
