removing unnecessary comments and formatting

--- a/privacy.html
+++ b/privacy.html
@@ -68,15 +68,22 @@
       <article>
         <h2> SUMMARY OF KEY POINTS</h2>
         <p>
-          <b>This summary provides key points from our privacy notice, but you can find out more details about any of these
-          topics by clicking the link following each key point or by using our <a href="#toc">table of contents</a>  below to find the
-          section you are looking for.</b> <br> <br>
+          <b>This summary provides key points from our privacy notice, but you can find out more details about any of
+            these
+            topics by clicking the link following each key point or by using our <a href="#toc">table of contents</a>
+            below to find the
+            section you are looking for.</b> <br> <br>
           <b>What personal information do we process?</b> When you visit, use, or navigate our Services, we may process
-          personal information depending on how you interact with Join and the Services, the choices you make, and the products
-          and features you use. Learn more about <a href="#personalinfo">personal information you disclose to us</a>. <br> <br>
-          <b>Do we process any sensitive personal information?</b>We do not process sensitive personal information. <br> <br>
-          <b>Do we receive any information from third parties?</b> We do not receive any information from third parties. <br> <br>
-          <b>How do we process your information?</b> We process your information to provide, improve, and administer our <br> <br>
+          personal information depending on how you interact with Join and the Services, the choices you make, and the
+          products
+          and features you use. Learn more about <a href="#personalinfo">personal information you disclose to us</a>.
+          <br> <br>
+          <b>Do we process any sensitive personal information?</b>We do not process sensitive personal information. <br>
+          <br>
+          <b>Do we receive any information from third parties?</b> We do not receive any information from third parties.
+          <br> <br>
+          <b>How do we process your information?</b> We process your information to provide, improve, and administer our
+          <br> <br>
           Services, communicate with you, for security and fraud prevention, and to comply with law. We may also process
           your information for other purposes with your consent. We process your information only when we have a valid
           legal reason to do so. Learn more about how we process your information. <br> <br>
@@ -84,14 +91,17 @@
           specific
           situations and with specific third parties. Learn more about when and with whom we share your personal
           information. <br> <br>
-          <b>What are your rights?</b> Depending on where you are located geographically, the applicable privacy law may mean
+          <b>What are your rights?</b> Depending on where you are located geographically, the applicable privacy law may
+          mean
           you
           have certain rights regarding your personal information. Learn more about your privacy rights. <br> <br>
-          <b>How do you exercise your rights?</b> The easiest way to exercise your rights is by submitting a data subject
+          <b>How do you exercise your rights?</b> The easiest way to exercise your rights is by submitting a data
+          subject
           access
           request, or by contacting us. We will consider and act upon any request in accordance with applicable data
           protection laws. <br> <br>
-          <b>Want to learn more about what Join does with any information we collect?</b> Review the privacy notice in full. <br> <br>
+          <b>Want to learn more about what Join does with any information we collect?</b> Review the privacy notice in
+          full. <br> <br>
         </p>
       </article>
       <article>
@@ -125,15 +135,15 @@
           interactions with us and the Services, the choices you make, and the products and features you use. The
           personal
           information we collect may include the following:
-          <ul>
-            <li>usernames</li>
-            <li>passwords</li>
-            <li>email addresses</li>
-          </ul>
-          Sensitive Information. We do not process sensitive information.
-          All personal information that you provide to us must be true, complete, and accurate, and you must notify us
-          of
-          any changes to such personal information.
+        <ul>
+          <li>usernames</li>
+          <li>passwords</li>
+          <li>email addresses</li>
+        </ul>
+        Sensitive Information. We do not process sensitive information.
+        All personal information that you provide to us must be true, complete, and accurate, and you must notify us
+        of
+        any changes to such personal information.
         </p>
       </article>
       <article>
@@ -145,22 +155,25 @@
           We process your personal information for a variety of reasons, depending on how you interact with our
           Services,
           including:
-          <ul>
-            <li>
-              To save or protect an individual's vital interest. We may process your information when necessary to save or
-          protect an individual's vital interest, such as to prevent harm.
-            </li>
-          </ul>
+        <ul>
+          <li>
+            To save or protect an individual's vital interest. We may process your information when necessary to save or
+            protect an individual's vital interest, such as to prevent harm.
+          </li>
+        </ul>
         </p>
         <article>
           <h2 id="three"> 3. WHAT LEGAL BASES DO WE RELY ON TO PROCESS YOUR INFORMATION?</h2>
           <p>
             In Short: We only process your personal information when we believe it is necessary and we have a valid
-            legal reason (i.e. legal basis) to do so under applicable law, like with your consent, to comply with laws, to
-            provide you with services to enter into or fulfil our contractual obligations, to protect your rights, or to fulfil
+            legal reason (i.e. legal basis) to do so under applicable law, like with your consent, to comply with laws,
+            to
+            provide you with services to enter into or fulfil our contractual obligations, to protect your rights, or to
+            fulfil
             our legitimate business interests. <br> <br>
             The General Data Protection Regulation (GDPR) and UK GDPR require us to explain the valid legal bases we
-            rely on in order to process your personal information. As such, we may rely on the following legal bases to process
+            rely on in order to process your personal information. As such, we may rely on the following legal bases to
+            process
             your personal information:
           <ul>
             <li>Consent: <br> We may process your information if you have given us permission (i.e. consent) to use your
