--- a/addtask.html
+++ b/addtask.html
@@ -5,38 +5,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Add Task</title>
-      <!-- FAVICON -->
-      <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="./img/favicon/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./img/favicon/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="./img/favicon/favicon-16x16.png"
-    />
-    <link rel="manifest" href="./img/favicon/site.webmanifest" />
-    <link
-      rel="mask-icon"
-      href="./img/favicon/safari-pinned-tab.svg"
-      color="#5bbad5"
-    />
-    <link rel="shortcut icon" href="./img/favicon/favicon.ico" />
-    <meta name="msapplication-TileColor" content="#da532c" />
-    <meta
-      name="msapplication-config"
-      content="/img/favicon/browserconfig.xml"
-    />
-    <meta name="theme-color" content="#ffffff" />
-    <!-- FAVICON END -->
+  <!-- FAVICON -->
+  <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon/favicon-16x16.png" />
+  <link rel="manifest" href="./img/favicon/site.webmanifest" />
+  <link rel="mask-icon" href="./img/favicon/safari-pinned-tab.svg" color="#5bbad5" />
+  <link rel="shortcut icon" href="./img/favicon/favicon.ico" />
+  <meta name="msapplication-TileColor" content="#da532c" />
+  <meta name="msapplication-config" content="/img/favicon/browserconfig.xml" />
+  <meta name="theme-color" content="#ffffff" />
+  <!-- FAVICON END -->
   <link rel="stylesheet" href="./styles/fonts.css">
   <link rel="stylesheet" href="styles/style.css">
   <link rel="stylesheet" href="./styles/bootstrap.css">
@@ -58,11 +37,11 @@
     <form onsubmit="addTask(); return false">
 
       <button onclick="getAssignedContacts()" type="submit"
-      class="display-none font20 pad-18-15 create-btn create-btn-responsive">Create<svg xmlns="http://www.w3.org/2000/svg"
-        width="25" height="25" viewBox="0 0 25 25" fill="none">
-        <path d="M4.0166 12.1704L10.0166 18.1704L20.0166 6.17041" stroke="white" stroke-width="2"
-          stroke-linecap="round" stroke-linejoin="round" />
-      </svg></button>
+        class="display-none font20 pad-18-15 create-btn create-btn-responsive">Create<svg
+          xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none">
+          <path d="M4.0166 12.1704L10.0166 18.1704L20.0166 6.17041" stroke="white" stroke-width="2"
+            stroke-linecap="round" stroke-linejoin="round" />
+        </svg></button>
 
       <div class="top-section">
 
@@ -181,7 +160,7 @@
           </div>
         </div>
       </div>
-    </div>
+  </div>
   </form>
   <div id="board-btn-container" class="addTaskBoard font20 display-none">
     <button class="add-to-board-btn">Task added to board <img id="add-to-board-btn-img" src="./img/board.svg"></button>
